--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<pagehelper-spring-boot-starter.version>1.2.3</pagehelper-spring-boot-starter.version>
 		<orderbyhelper-spring-boot-starter.version>1.0.2</orderbyhelper-spring-boot-starter.version>
 		<mapper-spring-boot-starter.version>1.2.3</mapper-spring-boot-starter.version>
+		<dubbo-spring-boot-starter.version>1.0.0</dubbo-spring-boot-starter.version>
 	</properties>
 
 	
@@ -40,19 +41,27 @@
 		    <version>${druid-springboot-starter.version}</version>
 		</dependency> -->
 		
-		<!-- 使用自己的动态数据源 只需引入数据源包即可 -->
-		<dependency>
-		    <groupId>com.alibaba</groupId>
-		    <artifactId>druid</artifactId>
-		    <version>${druid.version}</version>
-		</dependency>
-		
 		<!-- mybatis通用mapper 暂时不引用 否则JPA使用不了 -->
 		<!-- <dependency>
 		    <groupId>tk.mybatis</groupId>
 		    <artifactId>mapper-spring-boot-starter</artifactId>
 		    <version>${mapper-spring-boot-starter.version}</version>
 		</dependency> -->
+		
+		
+		<!-- dubbo-springboot-starter -->
+		<dependency>
+	        <groupId>com.alibaba.spring.boot</groupId>
+	        <artifactId>dubbo-spring-boot-starter</artifactId>
+	        <version>${dubbo-spring-boot-starter.version}</version>
+    	</dependency>
+		
+		<!-- 使用自己的动态数据源 只需引入数据源包即可 -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>druid</artifactId>
+		    <version>${druid.version}</version>
+		</dependency>
 		
 		<!-- orderbyhelper -->
 		<dependency>
