--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.github.sgroschupf</groupId>
+		    <groupId>com.101tec</groupId>
 		    <artifactId>zkclient</artifactId>
-		    <version>0.1</version>
+		    <version>0.10</version>
 		</dependency>
 	
 
