--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<druid.version>1.1.3</druid.version>
 		<pagehelper-spring-boot-starter.version>1.2.3</pagehelper-spring-boot-starter.version>
 		<orderbyhelper-spring-boot-starter.version>1.0.2</orderbyhelper-spring-boot-starter.version>
-		<mapper-spring-boot-starter.version>1.2.3</mapper-spring-boot-starter.version>
+		<mapper-spring-boot-starter.version>2.0.1</mapper-spring-boot-starter.version>
 		<dubbo-spring-boot-starter.version>0.1.0</dubbo-spring-boot-starter.version>
 	</properties>
 
@@ -43,23 +43,36 @@
 
 		<!-- mybatis通用mapper 暂时不引用 否则JPA使用不了 -->
 		<dependency>
-			<groupId>tk.mybatis</groupId> 
-			<artifactId>mapper-spring-boot-starter</artifactId> 
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
 			<version>${mapper-spring-boot-starter.version}</version>
 		</dependency>
-		
-		<dependency>
-		    <groupId>com.101tec</groupId>
-		    <artifactId>zkclient</artifactId>
-		    <version>0.10</version>
-		</dependency>
-	
 
-		<!-- dubbo-springboot-starter -->
 		<dependency>
-		    <groupId>com.alibaba.boot</groupId>
-		    <artifactId>dubbo-spring-boot-starter</artifactId>
-		    <version>${dubbo-spring-boot-starter.version}</version>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.10</version>
+		</dependency>
+
+
+		<!-- dubbo-springboot-starter dubbo2.5.10 有bug-->
+		<dependency>
+			<groupId>com.alibaba.boot</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>${dubbo-spring-boot-starter.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.alibaba</groupId>
+					<artifactId>dubbo</artifactId>
+					<version>2.5.10</version>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.6.1</version>
 		</dependency>
 
 		<!-- 使用自己的动态数据源 只需引入数据源包即可 -->
@@ -116,10 +129,8 @@
 		</dependency>
 
 		<!-- JPA -->
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-jpa</artifactId> 
+			</dependency> -->
 
 		<!-- freemarker模板 -->
 		<dependency>
